2006-08-01  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/openmbean/OpenMBeanAttributeInfo.java:
	(toString()): Corrected documentation.
	* javax/management/openmbean/OpenMBeanConstructorInfo.java,
	* javax/management/openmbean/OpenMBeanInfo.java,
	* javax/management/openmbean/OpenMBeanOperationInfo.java:
	New files.
	* javax/management/openmbean/OpenMBeanParameterInfo.java:
	(toString()): Corrected documentation.
	
2006-08-01  Tania Bento  <tbento@redhat.com>

	* java/awt/Choice.java
	(remove(int)): Added documentation.

2006-08-01  Tania Bento  <tbento@redhat.com>
	
	* java/awt/Choice.java
	(remove(int)): An IllegalArgumentException should not be thrown
	if int is invalid.  Update selectedIndex and peer selection.

2006-08-01  Tania Bento  <tbento@redhat.com>

	* java/awt/CardLayout.java
	(toString): Changed format of string outputted.
	(goToComponent): Changed the order of the if-clause.

2006-08-01  Tania Bento  <tbento@redhat.com>

	* java/awt/List.java
	(select): Check if selected is null before execution of
	for-loop.  If it is null, selected is instantiated and 
	the index is added to it.

2006-07-31  Roman Kennke  <kennke@aicas.com>

	PR 28562
	* javax/swing/plaf/basic/BasicOptionPaneUI.java
	(PropertyChangeHandler.propertyChange): Uninstall and reinstall
	component when visual properties change.

2006-07-31  Roman Kennke  <kennke@aicas.com>

	PR 28534
	* javax/swing/JTree.java
	(JTree(TreeModel)): Set cell renderer to null.
	* javax/swing/plaf/basic/BasicTreeUI.java
	(setCellRenderer): Finish editing before setting the
	cell renderer. Refresh the layout. Don't set the
	currentCellRenderer field here (that's done in updateRenderer).
	(updateRenderer): Handle createdRenderer field here too.
	Set renderer to a default handler when the current renderer
	in the JTree is null.

2006-07-31  Tom Tromey  <tromey@redhat.com>

	* INSTALL: Updated for ASM.

2006-07-31  Tom Tromey  <tromey@redhat.com>

	PR libgcj/23682: